# SkyFall

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  SkyFall.sln
SkyFall/: BaseEntity.hpp  BaseGame.cpp  BaseGame.hpp  BaseObject.hpp  BaseWeapon.cpp  BaseWeapon.hpp  BulletProjectile.cpp  BulletProjectile.hpp  GameObjectManager.cpp  GameObjectManager.hpp  GameSaveManager.hpp  Input.cpp  Input.hpp  LocalPlayer.cpp  LocalPlayer.hpp  Main.cpp  MainMenu.cpp  MainMenu.hpp  PhysicsObject.hpp  Pistol.cpp  Pistol.hpp  SkyFall.cpp  SkyFall.h  SkyFall.hpp  SkyFall.vcxproj  SkyFall.vcxproj.filters  UIPrimitives.cpp  UIPrimitives.hpp  WeaponPistol.cpp
backend/: Cargo.toml
backend/src/: asset.rs  camera.rs  circleshape.rs  drawable.rs  font.rs  gui_button.rs  gui_label.rs  lib.rs  rectangleshape.rs  rendering_arguments.rs  renderwindow.rs  sprite_sheet.rs  window.rs
input/: Cargo.toml
input/src/: lib.rs
src/: BaseGame.cpp  BaseWeapon.cpp  BulletProjectile.cpp  BulletProjectile.hpp  GameObjectManager.hpp  Input.cpp  LocalPlayer.cpp  LocalPlayer.hpp  Main.cpp  MainMenu.cpp  MainMenu.hpp  Scene1.cpp  Scene1.hpp  Scenes.hpp  SkyFall.cpp  SkyFall.hpp  SpriteSheet.cpp  SpriteSheet.hpp  UIPrimitives.cpp  WeaponPistol.cpp  WeaponPistol.hpp  bulletprojectile.cpp  bulletprojectile.hpp  enemy.cpp  enemy.hpp  gamestate.rs  local_player.rs  localplayer.cpp  localplayer.hpp  main.cpp  main.rs  main_menu.rs  mainmenu.cpp  mainmenu.hpp  scenemanager.rs  scenes.hpp  skyfall.cpp  skyfall.hpp  skyfall.rs  weaponpistol.cpp  (+1 more)
src/base/: entity.hpp  game.cpp  game.hpp  scene.hpp  weapon.cpp  weapon.hpp
src/game/: gameobjectmanager.cpp  gameobjectmanager.hpp  gamesave.hpp  gamesavemanager.hpp  input.cpp  physicsobject.hpp  spritesheet.cpp  spritesheet.hpp  uiprimitives.cpp  uiprimitives.hpp
src/local_player/: arm.rs  mod.rs
(+11 files in other folders)
