[package]
name = "backend"
version = "0.1.0"
authors = ["h5p9sl <21267024+h5p9sl@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
find_folder = "0.3.0"
piston = "0.49.0"
pistoncore-glutin_window = "0.63.0"
piston2d-graphics = "0.35.0"
piston2d-opengl_graphics = "0.70.0"
piston2d-shapes = "0.29.0"
